Improve branding to match comicaze

--- a/app/views/comics.scala.html
+++ b/app/views/comics.scala.html
@@ -6,9 +6,9 @@
  *@
 @(comics: Seq[Comic])
 
-@main("Comics") {
+@main("Comicaze") {
     <div class="container">
-        <h1>Comics</h1>
+        <h1>Comicaze</h1>
         <p>Aggregates of the latest 30 strips of various webcomics, displayed in a single page.</p>
         @for(comic <- comics) {
             <div class="row">
