Change library to use echo instead of blazy, sometimes blazy doesnt load

--- a/app/views/comicBlock.scala.html
+++ b/app/views/comicBlock.scala.html
@@ -12,8 +12,8 @@
         <h6 class="text-muted">@comic.comic.artist &#183; <a href="@comic.comic.originalUrl" target="_blank">@comic.comic.date.toString("yyyy-MM-dd")</a></h6>
     </div>
     <div class="col-xs-12">
-        <img    class="b-lazy img-responsive placeholder"
-                data-src="@comic.comic.imgUrl"
+        <img    class="img-responsive placeholder"
+                data-echo="@comic.comic.imgUrl"
                 height="250px"
                 alt="@comic.comic.title">
     </div>
