--- a/app/views/comicBlock.scala.html
+++ b/app/views/comicBlock.scala.html
@@ -12,9 +12,9 @@
         <h6 class="text-muted">@comic.comic.artist &#183; <a href="@comic.comic.originalUrl" target="_blank">@comic.comic.date.toString("yyyy-MM-dd")</a></h6>
     </div>
     <div class="col-xs-12">
-        <img    class="img-responsive placeholder"
+        <img    class="img-responsive comic"
                 data-echo="@comic.comic.imgUrl"
-                height="250px"
+                title="@comic.comic.title"
                 alt="@comic.comic.title">
     </div>
     <div class="col-xs-12 btn-group btn-group-justified" role="group">
